# parliamentvotes

./: .gitignore  main.py  pdf.py  pyproject.toml  reqs.py  votes.py
old/: odata.py  rdf.py
